Fixed the scrollbar in css

--- a/static/style.css
+++ b/static/style.css
@@ -86,10 +86,12 @@ img{
     padding: 5px;
     opacity: 0;
     transition: opacity 0.15s ease;
+    pointer-events: none;
 }
 
 .scrollbar-img:hover .scrollbar-hover{
     opacity: 1;
+    pointer-events: auto;
 }
 
 
